# win-light

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  release.yml
scripts/: version-bump.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  indexer.rs  launcher.rs  lib.rs  main.rs  searcher.rs
src/components/: ResultItem.tsx  ResultsList.tsx  SearchInput.tsx
src/hooks/: useKeyboardNav.ts  useSearch.ts
src/styles/: main.css
