[package]
name = "ancheck"
version = "0.1.0"
description = "AnCheck - Spotlight-like search launcher for Windows"
authors = ["Harshal Patel"]
edition = "2021"
license = "MIT"
repository = "https://github.com/HarshalPatel1972/win-light"
homepage = "https://github.com/HarshalPatel1972/win-light"

[lib]
name = "ancheck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# ── Release build optimizations ──────────────────────────
[profile.release]
panic = "abort"       # Smaller binary, no unwinding overhead
codegen-units = 1     # Maximum optimization (slower compile)
lto = true            # Link-Time Optimization – smaller + faster binary
opt-level = "s"       # Optimize for size (use "3" for max speed instead)
strip = true          # Strip debug symbols from the binary

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2"
fuzzy-matcher = "0.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
] }

